<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="true"
    android:backgroundTint="@color/primary_color"
    android:backgroundTintMode="add"
    app:barrierMargin="@dimen/material_emphasis_high_type"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="@color/accent_color"
        android:insetLeft="02dp"
        android:text="@string/click_to_get_the_result"
        android:textColor="#212121"
        android:textColorHighlight="@color/light_primary_color"
        android:textColorLink="@color/light_primary_color"
        app:icon="@drawable/touch_app"
        app:iconGravity="textStart"
        app:iconTint="#212121"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="416dp"
        android:layout_height="200dp"
        android:background="@color/primary_color"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/primary_color"
        tools:srcCompat="@color/primary_color" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:shadowDx="@dimen/material_emphasis_disabled"
        android:shadowDy="@dimen/material_emphasis_disabled"
        android:shadowRadius="@dimen/material_emphasis_disabled"
        android:text="@string/fill_in_the_data_to_get_your_coolness_percentage"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintWidth_max="wrap"
        app:layout_constraintWidth_percent="1.0" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="Enter your name"
        android:bufferType="normal"
        android:cursorVisible="true"
        android:ems="15"
        android:hint="@string/name"
        android:inputType="text"
        android:maxLength="50"
        android:shadowColor="@color/secondary_text_color"
        android:textColor="@color/secondary_text_color"
        android:textColorLink="@color/primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="15"
        android:hint="@string/weight"
        android:autofillHints="Enter your weight"
        android:inputType="numberDecimal"
        android:textColor="@color/secondary_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="15"
        android:hint="@string/height"
        android:autofillHints="Enter your height"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="15"
        android:hint="@string/age"
        android:autofillHints="Enter your age"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber3" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber3">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="32dp"
            android:text="@string/female"
            android:textColor="#212121"
            android:textColorLink="@color/primary_color"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/radioButton2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber3" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="76dp"
            android:text="@string/male"
            android:textColor="#212121"
            android:textColorLink="@color/primary_color"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber3" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:tint="@color/accent_color"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_android_black_24dp" />
</androidx.constraintlayout.widget.ConstraintLayout>